--- a/snippets/home-snippet.html
+++ b/snippets/home-snippet.html
@@ -7,7 +7,9 @@
       </div>
     </a>
   </div>
-
+<div class="text-center">
+  <img src="images/restaurant.jpg" class="img-responsive center-block" alt="Picture of restaurant">
+</div>
   <div class="col-md-4 col-sm-6 col-xs-12">
     <a href="#" onclick="$dc.loadMenuItems({{randomCategoryShortName}});">
       <div class="category-tile">
