--- a/snippets/home-snippet.html
+++ b/snippets/home-snippet.html
@@ -1,30 +1,39 @@
-<div id="home-tiles" class="row text-center">
-  <div class="col-md-4 col-sm-6 col-xs-12">
-    <a href="#" onclick="$dc.loadMenuCategories();">
-      <div class="category-tile">
-        <img src="images/menu-tile.jpg" alt="Menu" class="img-responsive">
-        <span>Menu</span>
-      </div>
-    </a>
-  </div>
+<!-- Hero Image -->
 <div class="text-center">
   <img src="images/restaurant.jpg" class="img-responsive center-block" alt="Picture of restaurant">
 </div>
+
+<!-- Home Tiles -->
+<div id="home-tiles" class="row text-center" style="margin-top: 30px;">
+
+  <!-- Menu Tile -->
   <div class="col-md-4 col-sm-6 col-xs-12">
-    <a href="#" onclick="$dc.loadMenuItems({{randomCategoryShortName}});">
+    <a href="#" onclick="$dc.loadMenuCategories();">
       <div class="category-tile">
-        <img src="images/specials-tile.jpg" alt="Specials" class="img-responsive">
-        <span>Specials</span>
+        <img src="images/menu-tile.jpg" alt="Menu" class="img-responsive center-block">
+        <span>MENU</span>
       </div>
     </a>
   </div>
 
-  <div class="col-md-4 col-sm-12 col-xs-12">
-    <a href="https://www.google.com/maps/place/David+Chu's+China+Bistro/@39.3219641,-76.6971614" target="_blank">
+  <!-- Specials Tile -->
+  <div class="col-md-4 col-sm-6 col-xs-12">
+    <a href="#" onclick="$dc.loadMenuItems({{randomCategoryShortName}});">
       <div class="category-tile">
-        <img src="images/map-tile.png" alt="Map" class="img-responsive">
-        <span>Map</span>
+        <img src="images/specials-tile.jpg" alt="Specials" class="img-responsive center-block">
+        <span>SPECIALS</span>
       </div>
     </a>
   </div>
+
+  <!-- Map Tile -->
+  <div class="col-md-4 col-sm-12 col-xs-12">
+    <a href="https://www.google.com/maps/place/David+Chu's+China+Bistro/@39.3219641,-76.6971614" target="_blank">
+      <div class="category-tile">
+        <img src="images/map-tile.png" alt="Map" class="img-responsive center-block">
+        <span>MAP</span>
+      </div>
+    </a>
+  </div>
+
 </div>
