--- a/snippets/home-snippet.html
+++ b/snippets/home-snippet.html
@@ -27,10 +27,16 @@
   </div>
 
   <!-- Map Tile -->
-  <div class="col-md-4 col-sm-12 col-xs-12">
-    <a href="https://www.google.com/maps/place/David+Chu's+China+Bistro/@39.3219641,-76.6971614" target="_blank">
-      <div class="category-tile">
-        <img src="images/map-tile.png" alt="Map" class="img-responsive center-block">
+<div class="col-md-4 col-sm-12 col-xs-12">
+  <div class="category-tile">
+    <iframe
+      width="100%"
+      height="250"
+      frameborder="0"
+      style="border:0; border-radius:6px;"
+      allowfullscreen
+      src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3105.0809700471997!2d-76.69716148464815!3d39.321964079510286!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c805259ae63ce5%3A0xc5ff2e5f3fddfc94!2sDavid%20Chu&#39;s%20China%20Bistro!5e0!3m2!1sen!2sus!4v1614040992551!5m2!1sen!2sus">
+    </iframe>
         <span>MAP</span>
       </div>
     </a>
