--- a/snippets/home-snippet.html
+++ b/snippets/home-snippet.html
@@ -3,11 +3,11 @@
   <img src="images/restaurant.jpg" class="img-responsive center-block" alt="Picture of restaurant">
 </div>
 
-<!-- Home Tiles -->
-<div id="home-tiles" class="row text-center" style="margin-top: 30px;">
+<!-- Home Tiles Section -->
+<div id="home-tiles" class="row text-center">
 
-  <!-- Menu Tile -->
-  <div class="col-md-4 col-sm-6 col-xs-12">
+  <!-- MENU tile -->
+  <div class="col-md-6 col-xs-12">
     <a href="#" onclick="$dc.loadMenuCategories();">
       <div class="category-tile">
         <img src="images/menu-tile.jpg" alt="Menu" class="img-responsive center-block">
@@ -16,8 +16,8 @@
     </a>
   </div>
 
-  <!-- Specials Tile -->
-  <div class="col-md-4 col-sm-6 col-xs-12">
+  <!-- SPECIALS tile -->
+  <div class="col-md-6 col-xs-12">
     <a href="#" onclick="$dc.loadMenuItems({{randomCategoryShortName}});">
       <div class="category-tile">
         <img src="images/specials-tile.jpg" alt="Specials" class="img-responsive center-block">
@@ -26,20 +26,19 @@
     </a>
   </div>
 
-  <!-- Map Tile -->
-<div class="col-md-4 col-sm-12 col-xs-12">
-  <div class="category-tile">
-    <iframe
-      width="100%"
-      height="250"
-      frameborder="0"
-      style="border:0; border-radius:6px;"
-      allowfullscreen
-      src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3105.0809700471997!2d-76.69716148464815!3d39.321964079510286!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c805259ae63ce5%3A0xc5ff2e5f3fddfc94!2sDavid%20Chu&#39;s%20China%20Bistro!5e0!3m2!1sen!2sus!4v1614040992551!5m2!1sen!2sus">
-    </iframe>
-        <span>MAP</span>
-      </div>
-    </a>
+  <!-- MAP tile with embedded iframe -->
+  <div class="col-md-12 col-xs-12">
+    <div class="category-tile">
+      <iframe
+        width="100%"
+        height="250"
+        frameborder="0"
+        style="border:0; border-radius:6px;"
+        allowfullscreen
+        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3105.0809700471997!2d-76.69716148464815!3d39.321964079510286!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c805259ae63ce5%3A0xc5ff2e5f3fddfc94!2sDavid%20Chu&#39;s%20China%20Bistro!5e0!3m2!1sen!2sus!4v1614040992551!5m2!1sen!2sus">
+      </iframe>
+      <span>MAP</span>
+    </div>
   </div>
 
 </div>
