--- a/snippets/home-snippet.html
+++ b/snippets/home-snippet.html
@@ -1,6 +1,6 @@
 <!-- Hero Image -->
 <div class="text-center">
-  <img src="images/restaurant.jpg" class="img-responsive center-block" alt="Picture of restaurant">
+  <img src="images/jumbotron_768.jpg" class="img-responsive center-block" alt="Picture of restaurant">
 </div>
 
 <!-- Home Tiles Section -->
